tests/golden/type_errors/array_all_callback_parameter.cd
let values: [number] = [1];
values.all(fun (value: string): bool { return true; });
