tests/golden/type_errors/array_all_callback_parameter.err
Type error at 2:17: parameter `value` expects number, got string
  values.all(fun (value: string): bool { return true; });
                  ^
